--- a/scripts/fs/index.html
+++ b/scripts/fs/index.html
@@ -391,7 +391,7 @@
 
             async function save() {
                 await fetch("configuration", {
-                    method: POST,
+                    method: "POST",
                     json: configuration,
                 });
             }
