Add dummy buttons

--- a/scripts/fs/index.html
+++ b/scripts/fs/index.html
@@ -29,6 +29,9 @@
                     <dt>Power</dt>
                     <dd class="power"></dd>
                 </dl>
+
+                <button>Zeroize</button>
+                <button>Calibrate INS</button>
                 <form>
                     <dl>
                         <dt>Console Forward</dt>
