--- a/libraries/AP_HAL_ChibiOS/hwdef/kha_maim/scripts/fs/index.html
+++ b/libraries/AP_HAL_ChibiOS/hwdef/kha_maim/scripts/fs/index.html
@@ -138,7 +138,7 @@
                         </dd>
                         <dt>Gateway</dt>
                         <dd>
-                            <input type="text" value="1.1.1.1" name="gateway" />
+                            <input type="text" value="1.2.3.4" name="gateway" />
                         </dd>
                         <dt></dt>
                         <dd><button type="submit">Save</button></dd>
@@ -175,7 +175,7 @@
                         </dd>
                         <dt>Gateway</dt>
                         <dd>
-                            <input type="text" value="1.1.1.1" name="gateway" />
+                            <input type="text" value="1.2.3.4" name="gateway" />
                         </dd>
                         <dt></dt>
                         <dd><button type="submit">Save</button></dd>
@@ -275,19 +275,19 @@
                 system: {
                     maintenancePort: "none",
                     consoleForward: {
-                        enabled: true,
+                        enabled: false,
                         ip: "0.0.0.0",
                         port: 0,
                     },
                 },
                 payload1: {
-                    enabled: true,
+                    enabled: false,
                     ip: "0.0.0.0",
                     netmask: "0.0.0.0",
                     gateway: "0.0.0.0",
                 },
                 payload2: {
-                    enabled: true,
+                    enabled: false,
                     ip: "0.0.0.0",
                     netmask: "0.0.0.0",
                     gateway: "0.0.0.0",
